[package]
name = "bls"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
arbitrary = { workspace = true }
bls12_381 = { git = "https://github.com/zkcrypto/bls12_381", rev = "9ea427c0eb1a7e2ac16902a322aea156c496ddb0", optional = true, features = ["experimental"]} # latest commit on 2024-06-22, which is the base commit of sp1-patches
blst = { version = "0.3.3", optional = true }
ethereum_hashing = { workspace = true }
ethereum_serde_utils = { workspace = true }
ethereum_ssz = { workspace = true }
fixed_bytes = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
safe_arith = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.8"
tree_hash = { workspace = true }
zeroize = { workspace = true }

[features]
arbitrary = []
default = ["zkcrypto"]
fake_crypto = []
supranational = ["blst"]
supranational-portable = ["supranational", "blst/portable"]
supranational-force-adx = ["supranational", "blst/force-adx"]
zkcrypto = ["bls12_381"]
